# attest

./: .env.example  README.md  mkdocs.yml
.github/: dependabot.yml
.github/actions/setup-attest/: action.yml
.github/workflows/: ci-engine.yml  ci-sdk-python.yml  ci-sdk-typescript.yml  docs.yml
docs/: changelog.md  getting-started.md  index.md  overview.md
docs/blog/: v040-launch.md
docs/guides/: multi-agent.md  simulation.md
docs/migration/: from-deepeval.md  from-manual-testing.md  from-promptfoo.md
docs/reference/python/: adapters.md  expect.md  index.md
docs/tutorials/: writing-a-framework-adapter.md
engine/: go.mod  go.sum
engine/cmd/attest-engine/: main.go
engine/internal/assertion/: budget.go  constraint.go  content.go  embedding_eval.go  evaluator.go  judge_eval.go  judge_meta_eval_test.go  pipeline.go  score.go  score_test.go  target.go  trace_check.go  trace_tree_eval.go  trace_tree_eval_test.go
engine/internal/assertion/embedding/: cosine.go  cosine_test.go  download.go  embedder.go  onnx.go  onnx_stub.go  openai.go  openai_test.go  tokenizer.go
engine/internal/assertion/judge/: rubric_adversarial_test.go
engine/internal/cache/: embeddings.go  embeddings_test.go  history.go  history_test.go  stress_test.go
engine/internal/llm/: mock_provider.go  mock_provider_test.go  ratelimiter_test.go
engine/internal/report/: json.go  markdown.go
engine/internal/server/: handler.go  handler_test.go  server.go
engine/internal/simulation/: fault.go  fault_test.go  integration_test.go  orchestrator.go  orchestrator_test.go  user.go  user_test.go
engine/internal/trace/: model.go  normalize.go  tree.go  tree_test.go  validate.go  validate_test.go
engine/internal/trace/testdata/traces/: deep_nesting.json  invalid_step_type.json  too_many_steps.json  valid.json
engine/pkg/types/: assertion.go  errors.go  protocol.go  trace.go  types_test.go
engine/testdata/traces/: deep_nesting.json  invalid_step_type.json  missing_trace_id.json  too_many_steps.json  valid.json
examples/: README.md
examples/ci/: tiered-testing.yml
examples/crewai-adapter/: pyproject.toml
examples/customer-service-agent/.github/workflows/: test.yml
examples/google-adk/: agent.py  pyproject.toml  test_agent.py
examples/langchain-agent/: pyproject.toml  test_agent.py
examples/llm-judge/: pyproject.toml
examples/multi-agent-workflow/: pyproject.toml
examples/rag-chatbot/: pyproject.toml
examples/simulation/: pyproject.toml
proto/attest/v1/: README.md  protocol-spec.md
sdks/python/: pyproject.toml
sdks/python/src/attest/: __init__.py  __main__.py  agent.py  client.py  config.py  continuous.py  delegate.py  engine_downloader.py  engine_manager.py  exceptions.py  expect.py  plugin.py  plugins.py  result.py  scaffold.py  trace.py  trace_tree.py
sdks/python/src/attest/_proto/: types.py
sdks/python/src/attest/adapters/: __init__.py  anthropic.py  crewai.py  gemini.py  google_adk.py  langchain.py  llamaindex.py  manual.py  ollama.py  openai.py  otel.py
sdks/python/src/attest/simulation/: __init__.py  personas.py
sdks/python/tests/: __init__.py  conftest.py  test_agent.py  test_budget.py  test_cli.py  test_cli_init.py  test_client.py  test_codec.py  test_config_extended.py  test_continuous.py  test_engine_downloader.py  test_engine_lifecycle.py  test_engine_manager.py  test_expect.py  test_expect_l5_l6.py  test_multi_agent.py  test_plugin.py  test_plugins.py  test_proto_types.py  test_result.py  test_simulation.py  test_simulation_mode.py  test_trace.py  test_version.py
sdks/python/tests/integration/: conftest.py  test_crewai_integration.py  test_e2e.py  test_google_adk_integration.py  test_langchain_integration.py
sdks/python/tests/test_adapters/: test_adapter_equivalence.py  test_anthropic.py  test_crewai.py  test_gemini.py  test_google_adk.py  test_langchain.py  test_ollama.py  test_openai.py
sdks/typescript/: pnpm-lock.yaml
sdks/typescript/examples/customer-service/: agent.test.ts  package.json
sdks/typescript/examples/quickstart/: package.json
sdks/typescript/tests/integration/: engine.test.ts
sdks/typescript/tests/unit/: branded-types.test.ts  cli.test.ts  continuous.test.ts  delegate.test.ts  engine-downloader.test.ts  expect-chain.test.ts  plugins.test.ts  simulation.test.ts
sdks/typescript/tests/unit/adapters/: anthropic.test.ts  gemini.test.ts  langchain.test.ts  manual.test.ts  ollama.test.ts  openai.test.ts  otel.test.ts
