[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attest-ai"
version = "0.4.1"
description = "Test framework for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Attest Contributors" }]
keywords = ["testing", "ai", "agents", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "twine>=6.0",
    "build>=1.0",
]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
gemini = ["google-genai>=1.0"]
ollama = ["ollama>=0.4"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
langchain = ["langchain-core>=0.3"]
google-adk = ["google-adk>=1.0"]
llamaindex = ["llama-index-core>=0.10.20"]
crewai = ["crewai>=0.60"]
integration-test = [
    "langchain-core>=0.3",
    "google-adk>=1.0",
    "google-genai>=1.0",
    "crewai>=0.60",
]
all = ["attest-ai[openai,anthropic,gemini,ollama,otel,langchain,google-adk,llamaindex,crewai]"]

[project.urls]
Homepage = "https://github.com/attest-framework/attest"
Repository = "https://github.com/attest-framework/attest"
Issues = "https://github.com/attest-framework/attest/issues"
Documentation = "https://github.com/attest-framework/attest#readme"

[project.entry-points.pytest11]
attest = "attest.plugin"

# Third-party plugins can register themselves under the "attest.plugins" entry
# point group. Attest discovers and loads them at runtime via
# load_entrypoint_plugins() in attest.plugins.
#
# Example in a plugin's pyproject.toml:
#   [project.entry-points."attest.plugins"]
#   my-plugin = "my_package:MyPlugin"
#
# The entry point value must be importable and satisfy the AttestPlugin Protocol
# (has .name, .plugin_type, and .execute(trace, spec) -> PluginResult).

[tool.hatch.build.targets.wheel]
packages = ["src/attest"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires engine binary or framework deps"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langchain_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google", "google.adk.*", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["llama_index.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["crewai.*"]
ignore_missing_imports = true
